--- a/notebooks/demo_of_filter.ipynb
+++ b/notebooks/demo_of_filter.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -78,15 +78,57 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'SyntheticData' object has no attribute 'state_phi'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/t1/github_repos/SlowKalmanFilter/notebooks/demo_of_filter.ipynb Cell 6\u001b[0m line \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/t1/github_repos/SlowKalmanFilter/notebooks/demo_of_filter.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m P    \u001b[39m=\u001b[39m SystemParameters()    \u001b[39m# User input system parameters. Can also be read from config file\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/t1/github_repos/SlowKalmanFilter/notebooks/demo_of_filter.ipynb#X10sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m PTA  \u001b[39m=\u001b[39m Pulsars(P)                       \u001b[39m# All pulsar-related quantities\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/t1/github_repos/SlowKalmanFilter/notebooks/demo_of_filter.ipynb#X10sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m data \u001b[39m=\u001b[39m SyntheticData(PTA,P)             \u001b[39m# Given the system parameters and the PTA configuration, create some synthetic data\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/t1/github_repos/SlowKalmanFilter/notebooks/demo_of_filter.ipynb#X10sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m#Define the model to be used by the Kalman Filter\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/t1/github_repos/SlowKalmanFilter/notebooks/demo_of_filter.ipynb#X10sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m model \u001b[39m=\u001b[39m PhaseModel(P,PTA)\n",
-      "File \u001b[0;32m~/github_repos/SlowKalmanFilter/notebooks/../src/synthetic_data.py:80\u001b[0m, in \u001b[0;36m__init__\u001b[0;34m(self, pulsars, P)\u001b[0m\n\u001b[1;32m     76\u001b[0m self.state_phi = state[:,0::2]\n\u001b[1;32m     77\u001b[0m self.state_f = state[:,1::2]\n\u001b[0;32m---> 80\u001b[0m # #Now calculate the modulation factor due to the GW   \n\u001b[1;32m     81\u001b[0m #GW_function = gw_psr_terms \n\u001b[1;32m     82\u001b[0m # \n\u001b[1;32m     83\u001b[0m #      \n\u001b[1;32m     84\u001b[0m # if P.use_psr_terms_in_data:\n\u001b[1;32m     85\u001b[0m     \n\u001b[1;32m     86\u001b[0m #     logging.info(\"You are including the PSR terms in your synthetic data generation\")\n\u001b[1;32m     87\u001b[0m # else:\n\u001b[1;32m     88\u001b[0m #     GW_function = gw_earth_terms\n\u001b[1;32m     89\u001b[0m #     logging.info(\"You are using just the Earth terms in your synthetic data generation\")\n\u001b[1;32m     90\u001b[0m \n\u001b[1;32m     91\u001b[0m \n\u001b[1;32m     92\u001b[0m \n\u001b[1;32m     93\u001b[0m \n\u001b[1;32m     94\u001b[0m #Now get the heterodyned phi measured at the detector\n\u001b[1;32m     95\u001b[0m GW = gw_psr_terms(\n\u001b[1;32m     96\u001b[0m                                 P.δ,\n\u001b[1;32m     97\u001b[0m                                 P.α,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    106\u001b[0m                                 pulsars.χ\n\u001b[1;32m    107\u001b[0m                                 )\n\u001b[1;32m    110\u001b[0m self.phi_measured_no_noise = self.state_phi - (self.state_f+pulsars.ephemeris)*GW\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SyntheticData' object has no attribute 'state_phi'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3398, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/var/folders/bx/dsrq957n43bckqdm1vkk78yc0000gn/T/ipykernel_43553/1310309289.py\", line 15, in <cell line: 15>\n",
+      "    data = SyntheticData(PTA,P)             # Given the system parameters and the PTA configuration, create some synthetic data\n",
+      "  File \"/Users/t1/github_repos/SlowKalmanFilter/notebooks/../src/synthetic_data.py\", line 68, in __init__\n",
+      "    GW = gw_measurement_equation(Ω=P.Ω,\n",
+      "  File \"/Users/t1/github_repos/SlowKalmanFilter/notebooks/../src/gravitational_waves.py\", line 69, in gw_measurement_equation\n",
+      "    for k in range(H):\n",
+      "TypeError: only integer scalar arrays can be converted to a scalar index\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 1993, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/stack_data/core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"/Users/t1/miniconda3/envs/KalmanGW/lib/python3.10/site-packages/executing/executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
