some more unit tests

--- a/notebooks/demo_of_filter.ipynb
+++ b/notebooks/demo_of_filter.ipynb
@@ -7,7 +7,13 @@
     "## Demo of filter\n",
     "\n",
     "\n",
-    "This notebook demonstrates the use of the Kalman filter."
+    "This notebook demonstrates the use of the Kalman filter.\n",
+    "\n",
+    "Contents:\n",
+    "\n",
+    "1. Canonical Example\n",
+    "\n",
+    "2. Likelihood curves"
    ]
   },
   {
