--- a/notebooks/tracking.ipynb
+++ b/notebooks/tracking.ipynb
@@ -7,25 +7,30 @@
     "# Example application of the extended Kalman filter to the Van der Pol oscillator\n",
     "\n",
     "\n",
-    "This notebook demonstrates the application of the extended Kalman filter to the [Van der pol oscillator](https://en.wikipedia.org/wiki/Van_der_Pol_oscillator).\n",
+    "This notebook demonstrates the application of the extended Kalman filter to the [Van der Pol oscillator](https://en.wikipedia.org/wiki/Van_der_Pol_oscillator).\n",
+    "\n",
+    "### <font color='289C4E'>Table of contents<font><a class='anchor' id='top'></a>\n",
+    "\n",
+    "1. [Creating synthetic data](#synthetic)\n",
+    "\n",
+    "1. [Running the EKF](#ekf)\n",
     "\n",
     "\n",
-    "Contents:\n",
     "\n",
-    "1. "
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Creating synthetic data \n",
+    "## 1. Creating synthetic data <a name=\"synthetic\"></a>\n",
     "\n",
     "We consider the following system\n",
     "\n",
-    "* States $\\bold{x} = (x,y)$\n",
+    "* States $\\mathbf{x} = (x,y)$\n",
     "\n",
-    "* Observations $\\bold{z} = z$\n",
+    "* Observations $\\mathbf{z} = z$\n",
     "\n",
     "with \n",
     "\n",
@@ -36,11 +41,7 @@
     "$$z = xy + \\epsilon_{\\rm m} $$\n",
     "\n",
     "\n",
-    "This is the second order Van der Pol oscillator recast as a pair of first order ODEs, with some process noise added. The observation $z$ is arbitrarily chosen to be a product of the states.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Example:</b> Blue boxes are used to display information.\n",
-    "</div>"
+    "This is the second order Van der Pol oscillator recast as a pair of first order ODEs, with some process noise added. The observation $z$ is arbitrarily chosen to be a product of the states."
    ]
   },
   {
@@ -313,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Running the EKF\n",
+    "## 2. Running the EKF <a name=\"ekf\"></a>\n",
     "\n",
     "\n",
     "Given this synthetic data, lets look at how to deploy the extended Kalman filter to recover estimates of the states.\n",
@@ -321,28 +322,28 @@
     "First we need to specify all the Kalman \"machinery\":\n",
     "\n",
     "\n",
-    "* States $\\bold{x} = (x,y)$\n",
-    "* State transition function $f(\\bold{x}) =\\bold{x} + dt \\begin{bmatrix}\n",
+    "* States $\\mathbf{x} = (x,y)$\n",
+    "* State transition function $f(\\mathbf{x}) =\\mathbf{x} + dt \\begin{bmatrix}\n",
     "           y \\\\\n",
     "           \\mu(1-x^2)y - x\\\\\n",
     "         \\end{bmatrix}$ \n",
     "\n",
-    "* Observation function $h(\\bold{x}) = xy$\n",
+    "* Observation function $h(\\mathbf{x}) = xy$\n",
     "\n",
-    "* State Jacobian $F = \\frac{\\partial f}{\\partial \\boldsymbol{x}} =\\begin{pmatrix}\n",
+    "* State Jacobian $F = \\frac{\\partial f}{\\partial \\mathbf{x}} =\\begin{pmatrix}\n",
     "           1 & dt \\\\\n",
     "           -dt(2\\mu x y +1) & 1+dt \\mu (1-x^2)\\\\\n",
     "         \\end{pmatrix}$\n",
     "\n",
-    "* Measurement Jacobian $H = \\frac{\\partial h}{\\partial \\boldsymbol{x}} = \\begin{pmatrix}\n",
+    "* Measurement Jacobian $H = \\frac{\\partial h}{\\partial \\mathbf{x}} = \\begin{pmatrix}\n",
     "           y  \\\\\n",
     "           x\\\\\n",
     "         \\end{pmatrix}$\n",
     "\n",
     "\n",
-    "* Q-matrix $\\boldsymbol Q = ? (\\propto \\sigma_{\\rm p}^2$ presumably. How does this work for non-linear systems?$) \n",
+    "* Q-matrix $\\mathbf{Q} = ? (\\propto \\sigma_{\\rm p}^2$ presumably. How does this work for non-linear systems?$) \n",
     "\n",
-    "* R-matrix $\\boldsymbol{R} = \\sigma_{\\rm m}^2$\n",
+    "* R-matrix $\\mathbf{R} = \\sigma_{\\rm m}^2$\n",
     "\n",
     "\n"
    ]
