--- a/notebooks/NoisyPendulum.ipynb
+++ b/notebooks/NoisyPendulum.ipynb
@@ -497,11 +497,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Tracking the parameters\n",
+    "\n",
+    "So far we have set $\\delta$-function priors on the free parameters of the model. That is, we assume them to be known exactly _a priori_. The parameters can be estimated by maximising the likelihood using e.g. nested sampling.\n",
+    "\n",
+    "In this section we trial an alternative approach where the parameters are included as states. \n",
+    "\n",
+    "Specifically we extend our state vector to be $x = (x_1,x_2,g)$ and try to estimate $g$.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from kalman_filter import UnscentedKalmanFilter\n",
+    "from model import UKFKalmanPendulum\n",
+    "\n",
+    "α  =1e-4 \n",
+    "β = 2 \n",
+    "κ = 0\n",
+    "\n",
+    "model = UKFKalmanPendulum(dt=dt) # a UKF specific model of the double pendulum \n",
+    "UKF      = UnscentedKalmanFilter(model,data,x_guess,P0,α,β,κ)\n",
+    "UKF.run(parameters_dict.sample())\n",
+    "Pendulum.plot_timeseries(plot_true_state=True, prediction_data=[UKF.state_predictions,UKF.measurement_predictions])\n",
+    "print(f'The log-likelihood is {UKF.ll}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Define the model\n",
+    "model = UKFKalmanPendulum(dt=dt)\n",
+    "\n",
+    "#Setup the filter\n",
+    "x_guess = np.array(([0,0]))      # guess of the initial states\n",
+    "P0      = 10*np.eye(2)           # uncertainty in that guess\n",
+    "data    = Pendulum.results[:,3].reshape(len(Pendulum.results),1)  # data to be ingested by the filter. Here reshaped to be a 2d array which the KF expects\n",
+    "KF      = ExtendedKalmanFilter(model,data,x_guess,P0)\n",
+    "\n",
+    "# Set the system parameters\n",
+    "# We use bilby to set delta-priors on the parameters, \n",
+    "# keeping an eye on when we will be using this in conjunction with Bayesian inference methods e.g. nested sampling\n",
+    "init_parameters,parameters_dict = constant_priors(g,σp,σm)\n",
+    "\n",
+    "#Run the filter\n",
+    "KF.run(parameters_dict.sample())\n",
+    "\n",
+    "#Plot the results \n",
+    "Pendulum.plot_timeseries(plot_true_state=True, prediction_data=[KF.state_predictions,KF.measurement_predictions])"
+   ]
   }
  ],
  "metadata": {
